WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258199
REGRESSION(
264826@main
): [GStreamer] Fill information on the gst GL context
https://bugs.webkit.org/show_bug.cgi?id=258199
Summary
REGRESSION(264826@main): [GStreamer] Fill information on the gst GL context
Carlos Garcia Campos
Reported
2023-06-16 06:01:48 PDT
In
264826@main
I removed the activate and fill of the gst GL context, confused by the API docs of gst_gl_context_fill_info() that says that it's typically used with wrapped contexts to allow wrapped contexts to be used as regular GstGLContexts. We don't want it to be used as a regular context, but the regular context uses the filled information of the sharing context to get the EGL config.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2023-06-16 06:03:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15046
EWS
Comment 2
2023-06-19 03:10:39 PDT
Committed
265302@main
(06c5a9867e9b): <
https://commits.webkit.org/265302@main
> Reviewed commits have been landed. Closing PR #15046 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-06-19 03:11:16 PDT
<
rdar://problem/110994734
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug